--- a/tox.ini
+++ b/tox.ini
@@ -1,2 +1,12 @@
+[tox]
+envlist = py27,py36
+
+[testenv]
+passenv = *
+deps =
+    -rrequirements.txt
+    -rrequirements-dev.txt
+commands = ./manage.sh tests
+
 [flake8]
 max-line-length = 120
